src/sass/style.scss
@import "./base";
@import "./placeholder";

*, ::before, ::after{
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    font-family: $font-stack;
}

.container{
    @extend %container-padding;
}

.content{
    width: 80%;
}

.bold{
    font-weight: bold;
}

header{

    #celebrate{
        padding: 2vh 4vw;
        background: $primary-color;
        color: $white-color;
        text-align: center;
        font-size: smaller;
        letter-spacing: .03em;
        font-weight: 600;
        
        a{
            color: $white-color;
        }
    }

    nav{
        background: $bg-grey-color;
        @extend %flex-row;
        justify-content: space-between;
        font-weight: bold;

        a{
            color: $primary-color;
            text-decoration: none;
        }

        #logo{
            display: flex;
            align-items: center;

            p{
                display: block;
                text-transform: lowercase;
                letter-spacing: .02em;
                font-size: larger;
            }
        }

        #main-menu{
            @extend %flex-row;
            justify-content: center;
            align-items: center;

            li{
                display: inline-block;
                margin: 0 1vw;
            }
        }
    }

    #login{

        button{
            border: none;
            padding: 2vh 2vw;
            font-weight: 700;
            letter-spacing: .02em;
            cursor: pointer;
        }

        button:nth-child(1){
            background-color: transparent;

        }

        button:nth-child(2){
            @extend %main-button;
        }
    }
}

main{
    @extend %flex-row;
    background: $bg-grey-color;

    #description{
        width: 60%;
        color: $dark-grey-color;
        padding: 5vh 0;

        h1, p{
            display: inline-block;
            padding: 2vh 0 1vh 0;
        }

        p{
            font-size: 0.9em;
        }

        ul{
            list-style-type: none;
            display: inline-block;
            margin-top: 3vh;

            li{
                display: flex;
                align-items: center;
                font-weight: 600;
                font-size: .9em;

                &::before{
                    content: url("../assets/checkmark.svg");
                    padding-right: .8em;
                }
            }    
        }

        form{
            margin-top: 5vh;
            display: flex;

            input{
                padding: .8em;
                border-radius: .4em;
                font-weight: 700;
                letter-spacing: .02em;
            }

            input[type="email"]{
                border: 1px solid $grey-color;
                width: 50%;

                &::placeholder {
                    text-align: center;
                }
            }

            input[type="submit"]{
                @extend %main-button;
                cursor: pointer;
                width: 50%;
            }
        }
    }

    #illustration{
        position: relative;
        width: 40%;
        border-radius: .5em;

        .card{
            position:absolute;
            top: 4vh;
            left: 2vw;
            width: 35%;
            background: $white-color;
            border: 1px solid $white-color;
            padding: 1vh 1vw;
            border-radius: .3em;

            p{
                display: inline-block;
                margin: 2vh 0;
                font-size: .9em; 
            }

            p:nth-child(1){
                font-weight: 600;
            }

            button{
                @extend %main-button;
                padding: 1vh 1vw;
                width: 100%;
                cursor: pointer; 
            }
        }

        img{
            width: 100%;
            height: auto;
        }
    }
}

#partners{
    @extend %flex-row;
    justify-content: space-between;
    align-items: center;

    img{
        width: calc(100% / 10);
        height: auto;
    }
}

#assurance{

    #secure{
        width: 100%;
        background: $bg-grey-color right / contain no-repeat url("../assets/phone-mockup.png");
        border-radius: .5em;
        @extend %flex-row;

        #description-secure{
        @extend %description-section;
        }

    }
}

#demo{
    @extend %flex-row;

    #video-demo{
        width: 60%;
        img{
            width: 100%;
            height: auto;
        }
    }

    #description-demo{
        @extend %description-section;
        h2{
            font-size:x-large;
        }

        a{
            text-transform: capitalize;
        }
    }
}

footer{
    background: $primary-color;
    color: $grey-more-color; 
    @extend %flex-row;

    div{
        padding: 2vh 2vw;
        line-height: 1.5em;
        h3, h4{
            color: $white-color;
            display: inline-block;
            margin-bottom: 2vh;
            letter-spacing: .04em;
        }

        ul{
            list-style-type: none;

            li{
                display: inline-block;
                margin: 1vh 0;
            }
        }
    }

    div:nth-child(1){
        flex-grow: 2;
    }

    div:nth-child(2),
    div:nth-child(3),
    div:nth-child(4),
    div:nth-child(5)
    {
        flex-grow: 1;
    }
}

@media screen and (max-width: 768px) {
    
    main{
        display: flex;
        flex-direction: column;

        #description{
            width: 100%;
            order: 1;
        }

        #illustration{
            width: 100%;
            order: 0;

            .card{
                width: 25%;
            }

            img{
                width: 100%;
                height: 65vh;
                object-fit: cover;
                display: block;
                border-radius: .8em;
            }
        }
    }


}

